[package]
name = "rafy-test"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[[bin]]
name = "rafy"
path = "src/main.rs"

[dependencies]
rafy = {path = "../rafy-rs"}
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]